--- a/style.css
+++ b/style.css
@@ -15,5 +15,5 @@ body{
     display: flex;
     align-items: center;
     overflow: hidden;
-    background: ;
+    background: linear-gradient();
 }
