--- a/style.css
+++ b/style.css
@@ -15,5 +15,5 @@ body{
     display: flex;
     align-items: center;
     overflow: hidden;
-    background: linear-gradient(to right, rgb(225,));
+    background: linear-gradient(to right, rgb(225,65,108));
 }
