--- a/style.css
+++ b/style.css
@@ -17,3 +17,6 @@ body{
     overflow: hidden;
     background: linear-gradient(to right, rgb(225,65,108), rgb(255,75,43));
 }
+image-slider{
+    
+}
