--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     overflow: hidden;
     background: linear-gradient(to right, rgb(225,65,108), rgb(255,75,43));
 }
-image-slider{
+.image-slider{
     width: 100%;
     height: 600px;
     position: absolute;
