--- a/style.css
+++ b/style.css
@@ -50,3 +50,7 @@ body{
 .button:hover{
     background-color: rgba(0, 0, 0, .2);
 }
+
+#slider-span1:target ~ .image-slider #img1, #slider-span1:target ~ .image-slider #button-1{
+    
+}
