--- a/style.css
+++ b/style.css
@@ -55,4 +55,5 @@ body{
 #slider-span1:target ~ .image-slider #img1, #slider-span1:target ~ .image-slider #button-1{
     width: 300px;
     height: 585px;
+    background-color: transparent;
 }
