--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
     background-color: transparent;
     filter: saturate(100%);
 }
-#slider-span3:target ~ .image-slider #img3, #slider-span3:target ~ .image-slider #button-3{
+#slider-span:target ~ .image-slider #img, #slider-span3:target ~ .image-slider #button-3{
     width: 300px;
     height: 585px;
     background-color: transparent;
