--- a/style.css
+++ b/style.css
@@ -76,13 +76,13 @@ body{
     background-color: transparent;
     filter: saturate(100%);
 }
-#slider-span5:target ~ .image-slider #img, #slider-span:target ~ .image-slider #button-5{
+#slider-span5:target ~ .image-slider #img, #slider-span:target ~ .image-slider #button-{
     width: 300px;
     height: 585px;
     background-color: transparent;
     filter: saturate(100%);
 }
-#slider-span6:target ~ .image-slider #img6, #slider-span6:target ~ .image-slider #button-6{
+#slider-span:target ~ .image-slider #img6, #slider-span6:target ~ .image-slider #button-6{
     width: 300px;
     height: 585px;
     background-color: transparent;
