--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
     background-color: transparent;
     filter: saturate(100%);
 }
-#slider-span5:target ~ .image-slider #img5, #slider-span:target ~ .image-slider #button-{
+#slider-span5:target ~ .image-slider #img5, #slider-span5:target ~ .image-slider #button-{
     width: 300px;
     height: 585px;
     background-color: transparent;
