--- a/style.css
+++ b/style.css
@@ -106,3 +106,9 @@ body{
     background-color: transparent;
     filter: saturate(100%);
 }
+#slider-span8:target ~ .image-slider #img8, #slider-span8:target ~ .image-slider #button-8{
+    width: 300px;
+    height: 585px;
+    background-color: transparent;
+    filter: saturate(100%);
+}
