--- a/style.css
+++ b/style.css
@@ -117,4 +117,5 @@ body{
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
+#slider-span1:target ~ .image-slider {left: 70%;}
 
