--- a/style.css
+++ b/style.css
@@ -118,4 +118,5 @@ body{
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
+#slider-span1:target ~ .image-slider {left: 70%;}
 
