--- a/style.css
+++ b/style.css
@@ -119,4 +119,5 @@ body{
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
+#slider-span1:target ~ .image-slider {left: 70%;}
 
