--- a/style.css
+++ b/style.css
@@ -120,4 +120,5 @@ body{
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
 #slider-span1:target ~ .image-slider {left: 70%;}
+#slider-span1:target ~ .image-slider {left: 70%;}
 
